# nasdaq-qdii-assistant

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/qdii_assistant/: __init__.py  cli.py  data_provider.py  journal.py  models.py  strategy.py
tests/: test_journal.py  test_strategy.py
